tests/neg/i7709.check
-- Error: tests/neg/i7709.scala:5:20 -----------------------------------------------------------------------------------
5 |  class B extends X.Y // error
  |                  ^^^
  |                  class Y cannot be accessed as a member of X.type from class B.
  |                   Access to protected class Y not permitted because enclosing object A
  |                   is not a subclass of object X where target is defined
-- Error: tests/neg/i7709.scala:6:21 -----------------------------------------------------------------------------------
6 |  class B2 extends X.Y: // error
  |                   ^^^
  |                   class Y cannot be accessed as a member of X.type from class B2.
  |                    Access to protected class Y not permitted because enclosing object A
  |                    is not a subclass of object X where target is defined
-- Error: tests/neg/i7709.scala:9:28 -----------------------------------------------------------------------------------
9 |  class B4 extends B3(new X.Y) // error
  |                          ^^^
  |                          class Y cannot be accessed as a member of X.type from class B4.
  |                           Access to protected class Y not permitted because enclosing object A
  |                           is not a subclass of object X where target is defined
-- Error: tests/neg/i7709.scala:11:34 ----------------------------------------------------------------------------------
11 |    def this(n: Int) = this(new X.Y().toString) // error
   |                                ^^^
   |                                class Y cannot be accessed as a member of X.type from class B5.
   |                                 Access to protected class Y not permitted because enclosing object A
   |                                 is not a subclass of object X where target is defined
-- Error: tests/neg/i7709.scala:13:20 ----------------------------------------------------------------------------------
13 |  class B extends X.Y // error
   |                  ^^^
   |                  class Y cannot be accessed as a member of X.type from class B.
   |                   Access to protected class Y not permitted because enclosing trait T
   |                   is not a subclass of object X where target is defined
-- Error: tests/neg/i7709.scala:18:18 ----------------------------------------------------------------------------------
18 |  def y  = new xx.Y  // error
   |               ^^^^
   |               class Y cannot be accessed as a member of XX from class C.
   |                Access to protected class Y not permitted because enclosing class C
   |                is not a subclass of class XX where target is defined
-- Error: tests/neg/i7709.scala:23:20 ----------------------------------------------------------------------------------
23 |    def y  = new xx.Y  // error
   |                 ^^^^
   |                 class Y cannot be accessed as a member of XX from class D.
   |                  Access to protected class Y not permitted because enclosing class D
   |                  is not a subclass of class XX where target is defined
-- Error: tests/neg/i7709.scala:31:20 ----------------------------------------------------------------------------------
31 |  class Q extends X.Y // error
   |                  ^^^
   |                  class Y cannot be accessed as a member of p.X.type from class Q.
   |                   Access to protected class Y not permitted because enclosing package p
   |                   is not a subclass of object X in package p where target is defined
